# biblioteka

./: .gitignore  AGENTAI.md  LICENSE.txt  Makefile  README-make.md  README.md  ROADMAP.md  pyproject.toml
MakeLib/: git.mk  github.mk  log.mk  python.mk  release.mk  run.mk  test.mk  tree.mk  upgrade_pip.mk
MakeLib/zsh/: manage-python-versions.zsh  project-switch-python.zsh  python.zsh  switch-python.zsh  system-python-upgrade.zsh
settings/: .env.example  biblioteka.toml
src/biblioteka/: __about__.py  main.py
src/biblioteka/config/: __init__.py  settings.py
src/biblioteka/core/: database.py  ocr.py  providers.py  scanner.py
src/biblioteka/logging/: __init__.py  logger.py
src/biblioteka/ui/: __init__.py  main_window.py
src/biblioteka/ui/tabs/: browser.py  logs.py  scanner.py  stats.py
src/biblioteka/ui/widgets/: book_card.py  search_bar.py
src/biblioteka/utils/: logger.py
tests/: test_core.py  test_ui.py
