[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "biblioteka"
dynamic = ["version"]
description = "Desktopowy katalog biblioteczny"
readme = "README.md"
requires-python = ">=3.14"
license = "MIT"
keywords = ["biblioteka", "katalog", "ksiazki", "duckdb"]
authors = [
    { name = "PyGamiQ", email = "pygamiq@gmail.com" },
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Programming Language :: Python :: 3.14",
]
dependencies = [
    "duckdb>=1.0.0",
    "structlog>=24.0.0",
    "requests>=2.32.0",
    "PySide6>=6.9.0",
    "opencv-python>=4.10.0",
    "pyzbar==0.1.9",
    "pytesseract>=0.3.10",
    "matplotlib>=3.9.0",
    "Pillow>=11.0.0",
    "pydantic>=2.13.3",
    "python-dotenv>=1.2.2",
    "tomli>=2.4.1",
    "pydantic-settings>=2.14.0",
]

[project.urls]
Documentation = "https://github.com/PyGamiQ/biblioteka#readme"
Issues = "https://github.com/PyGamiQ/biblioteka/issues"
Source = "https://github.com/PyGamiQ/biblioteka"

[tool.hatch.version]
path = "src/biblioteka/__about__.py"

[tool.hatch.build.targets.wheel]
packages = ["src/biblioteka"]

[tool.hatch.envs.types]
extra-dependencies = [
    "mypy>=1.0.0",
]
[tool.hatch.envs.types.scripts]
check = "mypy --install-types --non-interactive {args:src/bibliotka tests}"